# zspace_alice2

./: .clangd  .gitignore  readme.md
agents/: README.md  alice2_agent.md  build_agent.md  code_agent.md  document_agent.md  plan.md  querying_and_using_zspace_api.md  sketching_agent_workflow.md  zspace_agent.md  zspace_sketch_generation.md
agents/docs/: topology.md
alice2/: .clangd  CMakeLists.txt  CMakePresets.json  build.bat  build.sh  build_with_zspace.bat  run.bat  run.sh  run_with_zspace.bat
alice2/data/Natpower/: blockMesh_64.json
alice2/include/: alice2.h
alice2/scripts/: build.bat.in  grasshopper_load_postprocessed_toolpath_usda.cs  package_alice2_release.ps1  package_zspace_sdk.ps1
alice2/sdk/: README.md
alice2/src/ML/: Autoencoder.h  DCT.h  GridField.h  MLP.h
alice2/src/ML/DeepSDF/: LatentNavigator_CUDA.cu  LatentNavigator_CUDA.h  LatentSDF_CPU.h  LatentSDF_CUDA.cu  LatentSDF_CUDA.h  TrainingDataSet.h
alice2/src/ML/MLP/: polygonSDF_MLP.h
alice2/src/ML/WaveLatent/: WaveLatent.cpp  WaveLatent.h  WaveLatentNavigator.cpp  WaveLatentNavigator.h
alice2/src/analysis/: MeshAnalyzer.cpp  MeshAnalyzer.h  ProjectionConstraintAnalyzer.cpp  ProjectionConstraintAnalyzer.h  StressAnalyzer.cpp  StressAnalyzer.h
alice2/src/computeGeom/: ComputeMesh.cpp  FieldStack.cpp  FieldStack.h  ScalarField3D.cpp  TensorField.cpp  TensorField.h  scalarField.cpp  scalarField.h
alice2/src/core/: Application.cpp  Application.h  Camera.cpp  FontRenderer.cpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Transform.h  pch.h
alice2/src/input/: CameraController.cpp  CameraController.h
alice2/src/objects/: MeshObject.cpp  MeshObject.h  SceneObject.h  zSpaceObject.cpp  zSpaceObject.h
alice2/src/remeshing/: StressAlignedRemesher.cpp  StressAlignedRemesher.h
alice2/src/slicer/: zSlicingParameters.h  zSlicingParameters_cbc.h  zUnroller.cpp  zUnroller.h
alice2/src/solvers/: ProjectionConstraints.cpp  ProjectionConstraints.h  ProjectionSolver.cpp  ProjectionSolver.h
alice2/src/utils/: MathUtils.h  OpenGL.h  Quaternion.h  Vector.h
alice2/src/zspace/: zDisplaySettings.h  zSpaceDraw.cpp  zSpaceDraw.h
alice2/tests/: sketch_camera.cpp  sketch_eigen_json_demo.cpp  sketch_field3d.cpp  sketch_geometry.cpp  sketch_heGraph.cpp  sketch_heMesh.cpp  sketch_mesh.cpp  sketch_particles.cpp  sketch_sdf_stack.cpp
alice2/userSrc/: sketch_waveLatent.cpp  sketch_waveLatent_navigator.cpp  sketch_waveLatent_stack.cpp
alice2/userSrc/base/: sketch_base.cpp
alice2/userSrc/deepsdf/: sketch_latentSDF_CUDA.cpp  sketch_latentSDF_DF.cpp  sketch_latentSDF_Navigator_CUDA.cpp  sketch_latentSDF_Navigator_slow.cpp  sketch_latentSDF_panel_viewer_CUDA.cpp
alice2/userSrc/field/: sketch_scalarFieldSimple.cpp  sketch_scalarField_01_basic.cpp  sketch_scalarField_02_boolean.cpp  sketch_scalarField_03_blending.cpp  sketch_scalarField_04_directional.cpp  sketch_scalarField_05_towerSet.cpp  sketch_sdf_basic.cpp
alice2/userSrc/geometry/: sketch_circular_conical.cpp  sketch_planarise.cpp  sketch_stress_aligned_remesh.cpp  sketch_stress_aligned_streamlines.cpp
alice2/userSrc/latentSDF/: sketch_latentSDF_CPU.cpp  sketch_latentSDF_CUDA.cpp  sketch_latentSDF_Navigator_CUDA.cpp  sketch_latentSDF_stack.cpp  sketch_latentSDF_stack_CUDA.cpp
alice2/userSrc/waveLatent/: sketch_waveLatent.cpp  sketch_waveLatent_stack.cpp  sketch_waveLatent_triptych.cpp
alice2/userSrc/zspace/: sketch_zspace_base.cpp
alice2/userSrc/zspace/sdf/: sketch_zspace_sdf_polygon_field.cpp
alice2/userSrc/zspace/slicer/: sketch_zspace_blend_import.cpp
alice2/userSrc/zspace/topology/: sketch_zspace_halfedge_traversal.cpp
